<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".src.main.myPage.SignInFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/sign_in_btn_back"
            android:background="@drawable/btn_back"
            android:textColor="@color/black"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/gradation_line"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_profile"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/id"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/id_input"
                    android:layout_height="40dp"
                    android:hint="@string/id_hint"
                    android:textSize="12sp"
                    android:layout_weight="9"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:background="@drawable/btn_outline"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:textColor="@color/hint_text"
                    android:text="@string/check"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/password"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/password_input"
                android:layout_height="40dp"
                android:hint="@string/password_hint"
                android:textSize="12sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/password_check"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/password_check_input"
                android:layout_height="40dp"
                android:hint="@string/password_check_hint"
                android:textSize="12sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/nickname"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="25">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/nickname_input"
                    android:layout_height="40dp"
                    android:hint="@string/nickname_hint"
                    android:textSize="12sp"
                    android:layout_weight="24"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/check"
                    android:background="@drawable/btn_outline"
                    android:textColor="@color/hint_text"
                    android:layout_weight="1"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/phone_number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/phone_number_input"
                    android:layout_height="40dp"
                    android:hint="@string/phone_number_hint"
                    android:textSize="12sp"
                    android:layout_weight="9"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_outline"
                    android:text="@string/check"
                    android:textColor="@color/hint_text"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:text="@string/certification_number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/certification_number_input"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:hint="@string/certification_hint"
                    android:layout_weight="9"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_outline"
                    android:layout_height="30dp"
                    android:textColor="@color/hint_text"
                    android:text="@string/check"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/birth"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/birth_input"
                android:layout_height="40dp"
                android:hint="@string/birth_hint"
                android:textSize="12sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_backgroud"
                android:textColor="@color/white"
                android:text="@string/sign_in_title"
                android:gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>