<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <!-- 주문 번호 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

        <!-- 양쪽 정렬하기 위해 추가 -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- 택배사 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courier_service_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

        <!-- 양쪽 정렬하기 위해 추가 -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/courier_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courier_service"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- 송장번호 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_number_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

        <!-- 양쪽 정렬하기 위해 추가 -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/invoice_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"/>

    </LinearLayout>

    <!-- 배송 진행 과정 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/text_collection"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="집하"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/ic_gray_circle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/text_item_moving"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="상품\n이동 중"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/ic_gray_circle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/text_item_arrive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="배송지\n도착"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/ic_gray_circle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/text_item_depart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="배송\n출발"
            android:gravity="center"
            android:textSize="12sp"
            android:background="@drawable/ic_gray_circle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/text_deliver_complete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="배송\n완료"
            android:textSize="12sp"
            android:gravity="center"
            android:background="@drawable/ic_gray_circle"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/gradation_under_line"
        android:layout_marginBottom="20dp"/>

</LinearLayout>